--- a/apps/web/src/components/WorkPage/WorkPage.module.css
+++ b/apps/web/src/components/WorkPage/WorkPage.module.css
@@ -49,7 +49,3 @@
     align-items: center;
   }
 }
-
-.frequencyListContainer {
-  width: 100%;
-}
